--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body {body {
+body {
     background-color: white;
     font-family: Arial;
     color: black;
@@ -64,41 +64,7 @@ div{
     align-items: center;
     padding: 100px;
 }
-}
 
-h2 {
-    text-align:center
-}
 
-a {
-    text-decoration: none;
-}
 
-a  :visited{
-    color: red;
-}
 
-a  :link{
-    background-color: #b2ff99;
-    color: blue;
-    
-}
-
-a  :hover{
-    background-color: #77704D;
-
-}
-
-tr {  
-    color: black;
-}
-td {
-    color: coral;
-
-}
-section{
-    text-align: center;
-}
-div{
-    text-align: center;
-}
